--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -152,16 +152,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
 
-      - name: Install Build Dependencies (3.13)
-        if: matrix.python-version == '3.13'
-        run: |
-          pip install -U pip
-          pip install -U "setuptools<74" wheel twine
       - name: Install Build Dependencies
-        if: matrix.python-version != '3.13'
         run: |
           pip install -U pip
-          pip install -U "setuptools<74" wheel twine
+          pip install -U "setuptools <74" wheel twine
 
       - name: Build Acquisition (macOS x86_64)
         if: >
@@ -199,15 +193,7 @@ jobs:
           python setup.py build_ext -i
           python setup.py bdist_wheel
 
-      - name: Install Acquisition and dependencies (3.13)
-        if: matrix.python-version == '3.13'
-        run: |
-          # Install to collect dependencies into the (pip) cache.
-          # Use "--pre" here because dependencies with support for this future
-          # Python release may only be available as pre-releases
-          pip install --pre .[test]
       - name: Install Acquisition and dependencies
-        if: matrix.python-version != '3.13'
         run: |
           # Install to collect dependencies into the (pip) cache.
           pip install .[test]
@@ -250,7 +236,6 @@ jobs:
           && startsWith(github.ref, 'refs/tags')
           && !startsWith(runner.os, 'Linux')
           && !startsWith(matrix.python-version, 'pypy')
-          && !startsWith(matrix.python-version, '3.13')
         env:
           TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
         run: |
@@ -324,25 +309,10 @@ jobs:
         with:
           name: Acquisition-${{ runner.os }}-${{ matrix.python-version }}.whl
           path: dist/
-      - name: Install Acquisition ${{ matrix.python-version }}
-        if: matrix.python-version == '3.13'
-        run: |
-          pip install -U wheel "setuptools<74"
-          # coverage might have a wheel on PyPI for a future python version which is
-          # not ABI compatible with the current one, so build it from sdist:
-          pip install -U --no-binary :all: coverage
-          # Unzip into src/ so that testrunner can find the .so files
-          # when we ask it to load tests from that directory. This
-          # might also save some build time?
-          unzip -n dist/Acquisition-*whl -d src
-          # Use "--pre" here because dependencies with support for this future
-          # Python release may only be available as pre-releases
-          pip install --pre -e .[test]
       - name: Install Acquisition
-        if: matrix.python-version != '3.13'
         run: |
-          pip install -U wheel "setuptools<74"
-          pip install -U coverage
+          pip install -U wheel "setuptools <74"
+          pip install -U coverage[toml]
           pip install -U 'cffi; platform_python_implementation == "CPython"'
           # Unzip into src/ so that testrunner can find the .so files
           # when we ask it to load tests from that directory. This
@@ -466,8 +436,6 @@ jobs:
           name: manylinux_${{ matrix.image }}_wheels.zip
       - name: Restore pip cache permissions
         run: sudo chown -R $(whoami) ${{ steps.pip-cache-default.outputs.dir }}
-      - name: Prevent publishing wheels for unreleased Python versions
-        run: VER=$(echo '3.13' | tr -d .) && ls -al wheelhouse && sudo rm -f wheelhouse/*-cp${VER}*.whl && ls -al wheelhouse
       - name: Publish package to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         if: >
