--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,54 @@
 # https://github.com/zopefoundation/meta/tree/master/config/c-code
 
 [build-system]
-requires = ["setuptools <= 75.6.0"]
+requires = [
+    "setuptools",
+    "wheel",
+]
 build-backend = "setuptools.build_meta"
+
+[project]
+name = "Acquisition"
+version = "6.2.dev0"
+description = "Acquisition is a mechanism that allows objects to obtain attributes from the containment hierarchy they're in."
+readme = "README.rst"
+requires-python = ">=3.10"
+license = "ZPL-2.1"
+authors = [
+  { name = "Zope Foundation and contributors", email = "zope-dev@zope.dev" },
+]
+maintainers = [
+  { name = "Plone Foundation and contributors", email = "zope-dev@zope.dev" },
+]
+classifiers = [
+  "Development Status :: 6 - Mature",
+  "Environment :: Web Environment",
+  "Framework :: Zope",
+  "Framework :: Zope :: 5",
+  "Operating System :: OS Independent",
+  "Programming Language :: Python",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3 :: Only",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
+  "Programming Language :: Python :: 3.14",
+  "Programming Language :: Python :: Implementation :: CPython",
+  "Programming Language :: Python :: Implementation :: PyPy",
+]
+dependencies = [
+  "ExtensionClass >= 4.2.0",
+  "zope.interface",
+]
+
+[project.optional-dependencies]
+test = ["zope.testrunner"]
+
+[project.urls]
+Issues = "https://github.com/zopefoundation/Acquisition/issues"
+Source = "https://github.com/zopefoundation/Acquisition"
+Changelog = "https://github.com/zopefoundation/Acquisition/blob/master/CHANGES.rst"
 
 [tool.coverage.run]
 branch = true
@@ -16,10 +62,23 @@ fail_under = 96
 precision = 2
 ignore_errors = true
 show_missing = true
-exclude_lines = ["pragma: no cover", "pragma: nocover", "except ImportError:", "raise NotImplementedError", "if __name__ == '__main__':", "self.fail", "raise AssertionError", "raise unittest.Skip"]
+exclude_lines = [
+    "pragma: no cover",
+    "pragma: nocover",
+    "except ImportError:",
+    "raise NotImplementedError",
+    "if __name__ == '__main__':",
+    "self.fail",
+    "raise AssertionError",
+    "raise unittest.Skip",
+]
 
 [tool.coverage.html]
 directory = "parts/htmlcov"
 
 [tool.coverage.paths]
-source = ["src/", ".tox/*/lib/python*/site-packages/", ".tox/pypy*/site-packages/"]
+source = [
+    "src/",
+    ".tox/*/lib/python*/site-packages/",
+    ".tox/pypy*/site-packages/",
+]
