--- a/tox.ini
+++ b/tox.ini
@@ -3,20 +3,21 @@
 [tox]
 minversion = 4.0
 envlist =
+    release-check
     lint
-    py39,py39-pure
     py310,py310-pure
     py311,py311-pure
     py312,py312-pure
     py313,py313-pure
     py314,py314-pure
+    py315,py315-pure
     pypy3
     coverage
 
 [testenv]
-pip_pre = py314: true
+pip_pre = py315: true
 deps =
-    setuptools <= 75.6.0
+    setuptools >= 78.1.1,< 81
 setenv =
     pure: PURE_PYTHON=1
     !pure-!pypy3: PURE_PYTHON=0
@@ -49,7 +50,8 @@ description = ensure that the distribution is ready to release
 basepython = python3
 skip_install = true
 deps =
-    setuptools <= 75.6.0
+    setuptools
+    wheel
     twine
     build
     check-manifest
@@ -58,7 +60,7 @@ deps =
 commands_pre =
 commands =
     check-manifest
-    check-python-versions --only setup.py,tox.ini,.github/workflows/tests.yml
+    check-python-versions --only pyproject.toml,setup.py,tox.ini,.github/workflows/tests.yml
     python -m build --sdist --no-isolation
     twine check dist/*
 
